Made navbar transparent on coverrow and DimGrey on rest of the page

--- a/css/project0.css
+++ b/css/project0.css
@@ -8,4 +8,13 @@ body, html {
   background-size: cover;
 }
 
+.bg-nav {
+  transition: 500ms ease;
+  background: transparent !important;
+}
+
+.bg-nav.scrolled {
+  background: DimGrey !important;
+}
+
 /*# sourceMappingURL=project0.css.map */
