--- a/css/project0.scss
+++ b/css/project0.scss
@@ -16,6 +16,6 @@ body, html {
     background: transparent !important;
 }
 
-.bg-nav.Scrolled {
-    background: black;
+.bg-nav.scrolled {
+    background: DimGrey !important;
 }
